--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
@@ -1,4 +1,40 @@
 ﻿@page
 @model RazorPagesProject.Pages.Categories.IndexModel
-@{
-}
+
+<div class ="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary"> Category List</h2>
+
+        </div>
+        <div class="col-6">
+
+        </div>
+
+    </div>
+    <br /><br />
+    <table class="table table-bordered table-striped" style="width:100%">
+        <thead>
+            <tr>
+                <th>
+                    Category Name
+                </th>
+                <th>
+                    Category Order
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach(var category in Model.Categories ){
+                <tr>
+                    <td width="50%">
+                        Value of category name: @category.Name
+                    </td>
+                    <td width="30%">
+                        Value of display order: @category.DisplayOrder
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
