--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
@@ -8,7 +8,9 @@
 
         </div>
         <div class="col-6">
-
+            <a asp-page= "Create" class="btn btn-primary ">
+                Create New Category
+            </a>
         </div>
 
     </div>
