--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Create.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Create.cshtml
@@ -10,10 +10,12 @@
         <div class="mb-3">
             <label asp-for="@Model.Category.Name"></label>
             <input asp-for="@Model.Category.Name" class="form-control"/>
+            <span asp-validation-for="@Model.Category.Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="@Model.Category.DisplayOrder"></label>
             <input asp-for="@Model.Category.DisplayOrder" class="form-control" />
+            <span asp-validation-for="@Model.Category.DisplayOrder" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary" style="width:150px;">Create</button>
     </div>
