--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Create.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Create.cshtml
@@ -7,6 +7,7 @@
             <hr />
 
         </div>
+        <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label asp-for="@Model.Category.Name"></label>
             <input asp-for="@Model.Category.Name" class="form-control"/>
