--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
@@ -35,6 +35,16 @@
                     <td width="30%">
                         Value of display order: @category.DisplayOrder
                     </td>
+                    <td>
+                        <a asp-page="Edit" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil">&nbspEdit</i>
+                        </a>
+                    </td>
+                    <td>
+                        <a asp-page="Delete" class="btn btn-primary mx-2">
+                            <i class="bi bi-trash3">&nbspDelete</i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
