--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Edit.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@page
-@model RazorPagesProject.Pages.Categories.CreateModel
+@model RazorPagesProject.Pages.Categories.EditModel
 <form method="post">
+    <input hidden asp-for="@Model.Category.Id" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Create Category</h2>
+            <h2 class="text-primary pl-3">Edit Category</h2>
             <hr />
 
         </div>
@@ -18,8 +19,8 @@
             <input asp-for="@Model.Category.DisplayOrder" class="form-control" />
             <span asp-validation-for="@Model.Category.DisplayOrder" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px;">Create</button>
-        <a asp-page="Index" class="btn btn-secondary" style="width:150px;">Back to List</a>
+        <button type="submit" class="btn btn-primary" style="width:150px;">Edit</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:150px;">Back to List</a> 
     </div>
 
 
@@ -27,6 +28,6 @@
 
 @section Scripts{
     @{
-        <partial name="_ValidationScriptsPartial"/>
+    <partial name="_ValidationScriptsPartial"/>
     }
 }
