--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
@@ -37,10 +37,10 @@
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                                <a asp-page="Edit" class="btn btn-sm btn-primary mx-2">
+                                <a asp-page="Edit" asp-route-id="@category.Id" class="btn btn-sm btn-primary mx-2">
                                     <i class="bi bi-pencil">&nbspEdit</i>
                                 </a>
-                                <a asp-page="Delete" class="btn btn-sm btn-danger mx-2">
+                                <a asp-page="Delete" asp-route-id="@category.Id" class="btn btn-sm btn-danger mx-2">
                                     <i class="bi bi-trash3">&nbspDelete</i>
                                 </a>
 
