--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Delete.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Delete.cshtml
@@ -16,15 +16,9 @@
             <label asp-for="@Model.Category.DisplayOrder"></label>
             <input asp-for="@Model.Category.DisplayOrder" disabled class="form-control" />
         </div>
-        <button type="submit" class="btn btn-danger style="width:150px;">Delete</button>
+        <button type="submit" class="btn btn-danger" style="width:150px;">Delete</button>
         <a asp-page="Index" class="btn btn-secondary" style="width:150px;">Back to List</a> 
     </div>
 
 
 </form>
-@*
-@section Scripts{
-    @{
-    <partial name="_ValidationScriptsPartial"/>
-    }
-}*@
