--- a/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
+++ b/RazorPagesProject/RazorPagesProject/Pages/Categories/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿@page
 @model RazorPagesProject.Pages.Categories.IndexModel
 
+@if (TempData["SuccessOperation"] != null){
+    <h3>
+        @TempData["SuccessOperation"]
+    </h3>
+
+}
 <div class ="container p-3">
     <div class="row pt-4">
         <div class="col-6">
@@ -27,7 +33,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var category in Model.Categories ){
+            @foreach(var category in Model.Categories){
                 <tr>
                     <td width="50%">
                         Value of category name: @category.Name
